<resources>
    <string name="app_name">Идеальный калькулятор</string>

    <string name="welcome">"Добро пожаловать в идеальный калькулятор!"</string>
    <string name="formula_brock">"Метод Брока"</string>
    <string name="formula_lorenz">"Метод Лоренца"</string>
    <string name="table_egorov_levitsky">"Метод Егорова-Левитского"</string>
    <string name="index_ketle">"Индекс Кетле"</string>
    <string name="index_body_mass">"Индекс массы тела"</string>

    <string name="weight_calculation">"Расчет идеального веса"</string>
    <string name="weight_calculation2">"Расчет максимального веса"</string>
    <string name="weight_calculation3">"Расчет индекса массы тела"</string>

    <string name="registration">Регистрация</string>
    <string name="input">Вход</string>
    <string name="enter">Ввод</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Подтвердите пароль</string>
    <string name="authorization">Авторизация</string>



    <string name="woman">Женщина</string>
    <string name="man">Мужчина</string>
    <string name="twenty">26-39 лет</string>
    <string name="forty">от 40 лет</string>
    <string name="eighteen">18-25 лет</string>
    <string name="twenty6">от 26 лет</string>
    <string name="large">Крупное</string>
    <string name="normal">Норма</string>
    <string name="thin">Худое</string>
    <string name="body_text">Телосложение</string>

    <string name="calculate">Рассчитать</string>
    <string name="height">Ваш рост</string>
    <string name="input_weight">Ваш вес</string>
    <string name="weight">Ваш идеальный вес: </string>
    <string name="index_ketle_output">Ваш индекс Кетле: </string>
    <string name="index_body_mass_output">Ваш индекс массы тела: </string>
    <string name="weight_value">Здесь будет отражен Ваш идеальный вес</string>
    <string name="index_ketle_value">Здесь будет отражен Ваш индекс Кетле</string>
    <string name="index_body_mass_value">Здесь будет отражен Ваш индекс массы тела</string>
    <string name="nothing"> </string>
    <string name="add_kg">" кг"</string>

    <string name="lable_lorenz">"Данный метод подходит только для женщин"</string>
    <string name="lable2_lorenz">"Рост должен быть меньше 175см"</string>

    <string name="age">Ваш возраст</string>
    <string name="weight_max">Ваш максимальный вес: </string>
    <string name="weight_value_max">Здесь будет отражен Ваш максимальный вес</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_gender">Пол</string>
    <string name="text_age">Возраст</string>


    <array name="age20_29">
        <item>148+50.8+48.4+</item>
        <item>150+51.3+48.9+</item>
        <item>152+51.3+51+</item>
        <item>154+55.3+53+</item>
        <item>156+58.5+55.8+</item>
        <item>158+61.2+58.1+</item>
        <item>160+62.9+59.8+</item>
        <item>162+64.6+61.6+</item>
        <item>164+67.3+63.6+</item>
        <item>166+68.8+65.2+</item>
        <item>168+70.8+68.5+</item>
        <item>170+72.7+69.2+</item>
        <item>172+74.1+72.8+</item>
        <item>174+77.5+74.3+</item>
        <item>176+80.8+76.8+</item>
        <item>178+83+78.2+</item>
        <item>180+85.1+80.9+</item>
        <item>182+87.2+83.3+</item>
        <item>184+89.1+85.5+</item>
        <item>186+93.1+89.2+</item>
        <item>188+95.8+91.8+</item>
        <item>190+97.1+92.3+</item>
    </array>

    <array name="age30_39">
        <item>148+55+52.3+</item>
        <item>150+56.7+53.9+</item>
        <item>152+58.7+55+</item>
        <item>154+61.6+59.1+</item>
        <item>156+64.4+61.5+</item>
        <item>158+67.3+64.1+</item>
        <item>160+69.2+65.8+</item>
        <item>162+71+68.5+</item>
        <item>164+73.9+70.8+</item>
        <item>166+74.5+71.8+</item>
        <item>168+76.3+73.7+</item>
        <item>170+77.7+75.8+</item>
        <item>172+79.3+77+</item>
        <item>174+80.8+79+</item>
        <item>176+83.3+79.9+</item>
        <item>178+85.6+82.4+</item>
        <item>180+88+83.9+</item>
        <item>182+90.6+87.7+</item>
        <item>184+92+89.4+</item>
        <item>186+95+91+</item>
        <item>188+97+94.4+</item>
        <item>190+99.5+95.6+</item>
    </array>

    <array name="age40_49">
        <item>148+56.6+54.7+</item>
        <item>150+58.1+56.5+</item>
        <item>152+61.5+59.5+</item>
        <item>154+64.5+62.4+</item>
        <item>156+67.3+66+</item>
        <item>158+70.4+67.9+</item>
        <item>160+72.3+69.9+</item>
        <item>162+74.4+72.7.5+</item>
        <item>164+77.2+74+</item>
        <item>166+78+76.5+</item>
        <item>168+79.6+78.2+</item>
        <item>170+81+79.8+</item>
        <item>172+82.8+81.7+</item>
        <item>174+84.4+83.7+</item>
        <item>176+86+84.6+</item>
        <item>178+88+86.1+</item>
        <item>180+89.9+88.1+</item>
        <item>182+91.4+89.3+</item>
        <item>184+92.9+90.9+</item>
        <item>186+96.6+92.9+</item>
        <item>188+98+95.8+</item>
        <item>190+100.7+97.4+</item>
    </array>

    <array name="age50_59">
        <item>148+56+53.2+</item>
        <item>150+58+55.7+</item>
        <item>152+61.1+57.8+</item>
        <item>154+63.8+60.2+</item>
        <item>156+65.8+62.4+</item>
        <item>158+68+64.5+</item>
        <item>160+69.7+65.8+</item>
        <item>162+72.7+68.7+</item>
        <item>164+75.6+72+</item>
        <item>166+76.3+73.8+</item>
        <item>168+77.9+74.8+</item>
        <item>170+79.6+76.8+</item>
        <item>172+81.1+77.7+</item>
        <item>174+83+79.4+</item>
        <item>176+84.1+80.5+</item>
        <item>178+86.5+82.4+</item>
        <item>180+87.5+84.1+</item>
        <item>182+89.5+86.5+</item>
        <item>184+91.6+87.4+</item>
        <item>186+92.8+89.6+</item>
        <item>188+95+91.5+</item>
        <item>190+99.4+95.6+</item>
    </array>

    <array name="age60_69">
        <item>148+53.9+52.2+</item>
        <item>150+57.3+54.8+</item>
        <item>152+60.3+55.9+</item>
        <item>154+61.9+59+</item>
        <item>156+63.7+60.9+</item>
        <item>158+67+62.4+</item>
        <item>160+68.2+64.6+</item>
        <item>162+69.1+66.5+</item>
        <item>164+72.2+70+</item>
        <item>166+74.3+71.3+</item>
        <item>168+76+73.3+</item>
        <item>170+76.9+75+</item>
        <item>172+78.3+76.3+</item>
        <item>174+79.3+78+</item>
        <item>176+81.9+79.1+</item>
        <item>178+82.8+80.9+</item>
        <item>180+84.4+81.6+</item>
        <item>182+85.4+82.9+</item>
        <item>184+88+85.9+</item>
        <item>186+89+87.3+</item>
        <item>188+91.5+88.8+</item>
        <item>190+94.8+92.9+</item>
    </array>
</resources>
