<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#FAF0BE"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main2Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer_menu"
        android:background="#FAF0BE"/>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/welcome"
            android:textSize="25sp" />


        <Button
            android:id="@+id/registration"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:background="#F0DC82"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            />

        <Button
            android:id="@+id/input"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="#F0DC82"
            android:text="@string/input"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>


    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>


